@@ -1,3 +1,12 @@
+2008-05-19  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	* libs/gst/base/gstbasesrc.c: (gst_base_src_get_range),
+	(gst_base_src_start):
+	When the subclass did not set caps on outgoing buffers, configure the
+	caps we negotiated on the source pad.
+	When the typefind helper does not find caps, error out properly instead
+	of doing things with NULL caps.
+
 2008-05-18  Tim-Philipp Müller  <tim.muller at collabora co uk>
 
 	* gst/gsttypefind.h:
